@@ -18,7 +18,7 @@
     <li class="page_item page-item-2"><a href="/admin/entry/list/page" title="Pages">Pages</a></li>
     <li class="page_item page-item-2"><a href="/admin/setup" title="About">Configuration</a></li>
     <li class="page_item page-item-2" style="float:right;"><a href="{{ url }}" title="Admin">{{ url_linktext }}</a></li>
-    <li class="page_item page-item-2" style="float:right;font-size:1em"><a href="#" id="dshelp" rel="facebox" title="help">help</a></li>
+    <li class="page_item page-item-2" style="float:right;font-size:1em"><a href="#" id="dshelp" rel="facebox" title="help">feedback</a></li>
     <div class="clear"></div>
 </ul>
 
