@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="/static/{{ blog.theme }}" type="text/css" media="screen" />
     <link rel="alternate" type="application/atom+xml" title="{{ blog.title }}" href="{{ blog.feedurl }}" />
     <script type="text/javascript" src="/static/jquery-1.2.6.min.js"></script> 
+    
+    
     <link rel="pingback" href="/pingback" />
     {% block head_javascript %}{% endblock %}
 </head>
